simple/test/features/errors/codegen/e2005_failed_build_alloca.spl
# E2005: Failed to Build Alloca

Feature: E2005 - Failed to Build Alloca Instruction
  As a Simple compiler
  I want to detect failures in building alloca instructions
  So that internal compiler errors are reported

  Background:
    Given I have the Simple compiler

  Scenario: Alloca instruction build failure
    When I compile with codegen:
      '''
      fn test():
        # Code that triggers alloca instruction failure
        var x: ProblematicType
      '''
    Then I should see error E2005
    And the error message should be "failed to build alloca instruction"
    And the label should indicate "codegen failed here"
    And the help should suggest "this is an internal compiler error, please report it"

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      fn test():
        var x: ProblematicType
      '''
    Then I should see error E2005
    And the error message should contain "alloca 명령 빌드 실패"
